# rust-05-chat

./: .env  .gitignore  .pre-commit-config.yaml  Cargo.toml  cliff.toml  deny.toml  dev.sh  test.rest
.github/workflows/: build.yml
.sqlx/: query-c1e384f5e3d6257ee998c976d4bef5f33cbe75e8c6f259b1694f59c54c7676aa.json  query-ffe04bfbf82a33b89f864fcf89f27b3b0fea067475d161fa9362f6a5b4234724.json
chat_core/: Cargo.toml
chat_core/src/: lib.rs
chat_core/src/middlewares/: auth.rs  mod.rs  request_id.rs
chat_core/src/utils/: jwt.rs  mod.rs
chat_server/: Cargo.toml  app.yml
chat_server/fixtures/: test.sql
chat_server/src/: config.rs  error.rs  lib.rs  main.rs
chat_server/src/handlers/: auth.rs  chat.rs  message.rs  mod.rs  workspace.rs
chat_server/src/middlewares/: auth.rs  chat.rs  mod.rs  request_id.rs  server_time.rs
chat_server/src/models/: chat.rs  file.rs  message.rs  mod.rs  user.rs  workspace.rs
chat_server/src/utils/: jwt.rs  mod.rs
chat_test/: Cargo.toml
chat_test/tests/: chat.rs
fixtures/: private.pem  public.pem
migrations/: 20240612025601_init.sql  20240810005240_workspace.sql
notify_server/: Cargo.toml  index.html  notify.yml
notify_server/src/: config.rs  error.rs  lib.rs  main.rs  notify_event.rs  sse.rs
