[package]
name = "chat-core"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true }
axum-extra = { workspace = true }
headers = { workspace = true }
http = { workspace = true }
jsonwebtoken = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tower-http ={ workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
sqlx = { workspace = true }
chrono = { workspace = true }
