[package]
name = "chat-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
argon2 = "0.5.3"
# argon2 = { version = "0.5", features = ["std"] }
axum = { workspace = true }
axum-extra = { version = "0.9.3", features = ["typed-header"] }
chrono = { workspace = true }
headers = "0.4.0"
jsonwebtoken = "9.3.0"
# jwt-simple = "0.12"
serde = { workspace = true }
serde_yaml = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tower = "0.4.13"
tower-http = { version = "0.5.2", features = ["compression-br", "compression-deflate", "compression-gzip", "trace"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { version = "1.8.0", features = ["v7"] }

[dev-dependencies]
# http-body-util = "0.1.1"
# sqlx-db-tester = "0.4.0"
