[package]
name = "chat-server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true }
axum-extra = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tower = { workspace = true }
tower-http ={ workspace = true }

argon2 = "0.5.3"
uuid = { version = "1.8.0", features = ["v7"] }
headers = "0.4.0"
jsonwebtoken = "9.3.0"
http = "1.1.0"
