[package]
name = "chat-server"
version = "0.1.0"
edition = "2021"

[dependencies]
chat-core = { workspace = true }

http = { workspace = true }
anyhow = { workspace = true }
axum = { workspace = true }
axum-extra = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tower = { workspace = true }
tower-http ={ workspace = true }
serde_json = { workspace = true }
argon2 = { workspace = true }

# chat file
sha1 = "0.10.6"
hex = "0.4.3"

[dev-dependencies]
http-body-util = { workspace = true }
