[package]
name = "chat_test"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
axum.workspace = true
chat-core = { workspace = true }
chat-server = { workspace = true }
futures = "0.3.30"
notify-server = { workspace = true }
reqwest = { version = "0.12.5", features = ["rustls-tls", "json", "multipart"], default-features = false }
reqwest-eventsource = "0.6.0"
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
tokio.workspace = true

[dev-dependencies]
chat-server ={ workspace = true, features = ["test-utils"] }
