[package]
name = "notify-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chat-core = {workspace = true}

anyhow = { workspace = true }
tokio = { workspace = true }
tokio-stream = { version = "0.1.15", features = ["sync"] }
axum = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
axum-extra = { workspace = true }
futures = "0.3.30"
serde_yaml = { workspace = true }
serde.workspace = true
dashmap = "6.0.1"
sqlx.workspace = true
serde_json.workspace = true
